# DKU_Goals_Keeper

./: CMakeLists.txt  README.md  UML_Use_Case_Diagram.uxf
src/: CMakeLists.txt  main.cpp
src/forms/: CMakeLists.txt
src/forms/private/: main_form.cpp
